<resources>
    <string name="app_name">Course Catalogue</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="submit">Submit</string>
    <string name="students">Students</string>
    <string name="instructors">Instructors</string>
    <string name="done">done</string>
    <string name="courses">Courses</string>
    <string name="instructorList">Instructors</string>
    <string name="studentList">Students</string>
    <string name="add">Add</string>
    <string name="textview">TextView</string>
    <string name="addStudent">Add Student</string>
    <string name="Add">ADD</string>
    <string name="name">Name</string>
    <string name="update_title">Update Course</string>
    <string name="update">Update</string>
    <string name="register_here_if_you_don_t_have_an_account"><u>Register here if you don\'t have an account</u></string>
    <string name="or_login_instead"><u>Or Login instead</u></string>
    <string name="email">Email</string>
    <string name="register_activity_title">Register</string>
    <string name="are_you_a_student_or_an_instructor">Are you a student or an instructor?</string>
    <string name="enter_your_password">Enter password</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_your_name">Enter Full Name</string>
    <string name="full_name">Full Name</string>
    <string name="user_name_key">user_name</string>
    <string name="user_email_key">user_email</string>
    <string name="user_role_key">user_role</string>
    <string name="user_uid_key">user_uid</string>
    <string name="addInstructor">Add Instructor</string>
    <string name="delete_button">delete button</string>
    <string name="edit_button">edit button</string>
    <string name="home_icon">home icon</string>
    <string name="add_icon">add icon</string>
    <string name="course_code">Course Code</string>
    <string name="course_name">Course Name</string>
    <string name="seg2105">SEG2105</string>
    <string name="intro_to_software_engineering">Intro to Software Engineering</string>
    <string name="add_course">Add Course</string>
    <string name="course_description">Course Description</string>
    <string name="enter_course_description">Enter Course Description</string>
    <string name="instructor_assign_title">Assign Course</string>
    <string name="course_capacity">Course Capacity</string>
    <string name="enter_course_capacity">Enter course capacity</string>
    <string name="first_lecture_day">Select First Lecture Day and Time</string>
    <string name="enter_time">Enter Time</string>
    <string name="second_lecture_day">Select Second Lecture Day and Time</string>
    <string name="go_to_my_courses">Go to My Courses</string>
    <string name="course_name_label">Course Name:</string>
    <string name="course_code_label">Course Code:</string>
    <string name="instructor_label">Instructor:</string>
    <string name="instructor_my_courses">My Courses</string>
    <string name="view_enrolled_courses">View Enrolled Courses</string>
    <string name="enroll_a_course">Enroll a course</string>
    <string name="currently_enrolled_students">Currently Enrolled Students:</string>
    <string-array name="user_type">
        <item>Select</item>
        <item>Instructor</item>
        <item>Student</item>
    </string-array>
    <string-array name="week_days">
        <item>Select</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
</resources>