<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/adminAddCourseLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddCourse"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addCourseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/add_course"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/addCourseForm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAddCourse">

        <TextView
            android:id="@+id/textViewCourseCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/course_code"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/addCourseCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/purple_500"
            android:ems="10"
            android:hint="@string/seg2105"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textViewCourseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/course_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/addCourseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/purple_500"
            android:ems="10"
            android:hint="@string/intro_to_software_engineering"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/addCourseBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Add" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>