<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/instructorAssignPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarInstructorAssign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructorAssignTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/instructor_assign_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolBarInstructorAssign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolBarInstructorAssign"
        app:layout_constraintTop_toTopOf="@+id/toolBarInstructorAssign" />

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBarInstructorAssign">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/course_name"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/courseCodeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/course_code"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/purple_500"
                android:backgroundTintMode="screen" />

            <TextView
                android:id="@+id/courseDescriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/course_description"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/courseDescriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/purple_500"
                android:ems="10"
                android:hint="@string/enter_course_description"
                android:inputType="textMultiLine"
                android:minLines="3"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/courseCapacityText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/course_capacity"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/courseCapacityInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:backgroundTint="@color/purple_500"
                android:ems="10"
                android:hint="@string/enter_course_capacity"
                android:inputType="number"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/firstLectureSpinnerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/first_lecture_day"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/firstLectureSpinnerInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/purple_500"
                    android:entries="@array/week_days"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/timePickerInput1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:backgroundTint="@color/purple_500"
                    android:ems="10"
                    android:hint="@string/enter_time"
                    android:minHeight="48dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/secondLectureSpinnerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/second_lecture_day"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/secondLectureField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/secondLectureSpinnerInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/purple_500"
                    android:entries="@array/week_days"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/timePickerInput2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:backgroundTint="@color/purple_500"
                    android:ems="10"
                    android:hint="@string/enter_time"
                    android:minHeight="48dp" />
            </LinearLayout>


            <Button
                android:id="@+id/assignBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:enabled="true"
                android:text="@string/instructor_assign_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secondLectureField"
                app:layout_constraintVertical_bias="0.2" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>